--- a/m1_out.html
+++ b/m1_out.html
@@ -1,4 +1,4 @@
-<h1 id="rked-demo">rked Demo</h1>
+<h1 id="marked-demo">Marked Demo</h1>
 <p>这是一个Marked库使用的例子。 <a href="http://blog.fens.me/nodejs-markdown-marked/">http://blog.fens.me/nodejs-markdown-marked/</a></p>
 <blockquote>
 <p>A full-featured markdown parser and compiler, written in JavaScript. Built
